# shippinglabel-pypi

./: .bumpversion.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  stubs.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  conda_ci.yml  octocheese.yml  python_ci_linux.yml
shippinglabel_pypi/: __init__.py
tests/: conftest.py  requirements.txt  test_pypi.py
tests/cassettes/: test_bind_requirements_min_py[py310].json  test_bind_requirements_min_py[py311].json  test_bind_requirements_min_py[py312].json  test_bind_requirements_min_py[py313].json  test_bind_requirements_min_py[py34].json  test_bind_requirements_min_py[py35].json  test_bind_requirements_min_py[py36].json  test_bind_requirements_min_py[py37].json  test_bind_requirements_min_py[py38].json  test_bind_requirements_min_py[py39].json  test_get_latest.json  test_pypi.json  test_wheel_python_versions[click].json  test_wheel_python_versions[domdf_python_tools].json  test_wheel_python_versions[numpy].json  test_wheel_python_versions[sphinx].json
tests/test_pypi_/: test_bind_requirements_min_py_py310_.txt  test_bind_requirements_min_py_py312_.txt  test_bind_requirements_min_py_py34_.txt  test_bind_requirements_min_py_py35_.txt  test_bind_requirements_min_py_py36_.txt  test_bind_requirements_min_py_py37_.txt  test_bind_requirements_min_py_py38_.txt  test_bind_requirements_min_py_py39_.txt  test_get_metadata.yml  test_get_project_links_numpy_.yml  test_get_project_links_setuptools_.yml  test_get_project_links_sphinx_.yml  test_wheel_python_versions_click_.yml  test_wheel_python_versions_domdf_python_tools_.yml  test_wheel_python_versions_numpy_.yml  test_wheel_python_versions_sphinx_.yml
